<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="restart"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/msg_show_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_show_str"
        android:textAlignment="center"
        android:textColor="#1CCEE6"
        android:textColorHighlight="#368EE6"
        android:textColorHint="#198AED"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/hint_show_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hint_show_str"
        android:textAlignment="center"
        android:textColor="#30A0B3"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/attempts_left_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/attempts_left_str"
        android:textAlignment="center"
        android:textColor="#19CC12"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/num_user_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E1E606FF"
        android:drawableTint="#700808"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:inputType="number"
        android:shadowColor="#CD2222"
        android:textAlignment="center"
        android:textColor="#4400FF"
        android:textSize="38sp" />

    <Button
        android:id="@+id/guess_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F3199C"
        android:text="@string/guess_str"
        android:textSize="20sp" />

    <Button
        android:id="@+id/restart_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFF3199C"
        android:onClick="restart"
        android:text="@string/restart_str"
        android:textSize="20sp" />

</LinearLayout>